--- a/styles/breakpoints/_base.scss
+++ b/styles/breakpoints/_base.scss
@@ -313,7 +313,7 @@ a {
     text-align: right;
     z-index: 10;
     box-shadow: 1px 1px 10px #000;
-    transition: .2s;
+    transition: .3s;
     transform-origin: left;
     transform: scaleX(0) skewY(3deg);
     backface-visibility: hidden;
@@ -332,7 +332,7 @@ a {
         width: 95%;
         line-height: 25px;
         letter-spacing: -10px;
-        transition: .2s;
+        transition: .3s;
         transform: scaleX(0);
         transform-origin: right;
         backface-visibility: hidden;
@@ -705,14 +705,14 @@ a {
     &__body-wrapper {
         display: flex;
         width: 100%;
-        height: 600px;
+        height: 700px;
         flex-direction: column;
         margin-top: 150px;
         &__body-top {
             display: flex;
             flex-direction: column;
-            width: 35%;
-            margin: 0 3% 0 auto;
+            width: 75%;
+            margin: 30px 3% 0 auto;
             writing-mode: vertical-rl;
             text-orientation: upright;
             -webkit-text-orientation: upright;
@@ -735,7 +735,7 @@ a {
             display: flex;
             flex-direction: row;
             width: 100%;
-            margin-top: 60px;
+            margin-top: -50px;
             &__about-img-inner {
                 position: relative;
                 width: 15%;
