--- a/styles/style.css
+++ b/styles/style.css
@@ -820,6 +820,7 @@ a {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 75%;
+  height: 100%;
   margin: 30px 3% 0 auto;
   -webkit-writing-mode: vertical-rl;
       -ms-writing-mode: tb-rl;
@@ -853,7 +854,6 @@ a {
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
-  margin-top: -50px;
 }
 
 .about__body-wrapper__body-bottom__about-img-inner {
